--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.servlet.multipart.max-file-size=5MB
 
 
 # TLS , port 587
-#spring.mail.properties.mail.ph.starttls.enable=true
+spring.mail.properties.mail.ph.starttls.enable=true
 
 # SSL, post 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
